--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "component-library",
-  "version": "1.0.0",
+  "name": "saras-git-component-library",
+  "version": "0.1.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/ems/index.d.ts",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build": "rollup -c"
   },
   "author": "",
   "license": "ISC",
@@ -14,17 +21,21 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@stitches/react": "^1.2.8",
-    "@types/react": "^18.2.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "typescript": "^5.1.3"
+    "react-icons": "^4.12.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "rollup-plugin-dts": "^6.1.0",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@stitches/react": "^1.2.8",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
@@ -32,7 +43,15 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@types/react": "^18.2.14",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.4",
+    "postcss": "^8.4.31",
     "prop-types": "^15.8.1",
-    "storybook": "^7.5.3"
+    "rollup": "^4.5.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "storybook": "^7.5.3",
+    "typescript": "^5.1.3"
   }
 }
