--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "saras-git-component-library",
-  "version": "0.2.5",
+  "version": "0.3.8",
   "description": "",
   "main": "dist/cjs/index.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/ems/index.d.ts",
-  "type": "module",
+  "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
@@ -19,14 +17,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@stitches/react": "^1.2.8",
-    "react-icons": "^4.12.0"
-  },
   "devDependencies": {
-    "react-icons": "^4.12.0",
     "@babel/plugin-transform-react-jsx-source": "^7.19.6",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -52,18 +43,22 @@
     "eslint-plugin-storybook": "^0.6.12",
     "postcss": "^8.4.31",
     "prop-types": "^15.8.1",
-    "rollup": "^4.5.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "storybook": "^7.5.3",
-    "typescript": "^5.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "storybook": "^7.5.3",
+    "typescript": "^5.3.2",
+    "@radix-ui/react-select": "^2.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@stitches/react": "^1.2.8",
+    "react-icons": "^4.12.0"
   }
 }
