--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saras-git-component-library",
-  "version": "0.3.8",
+  "version": "0.5.1",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -8,19 +8,21 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build": "rm -rf dist/ && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
+    "test": "npx cross-env NODE_ENV=test jest Tests/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-source": "^7.19.6",
+    "@babel/preset-typescript": "^7.23.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -33,6 +35,11 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.9.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.16",
@@ -41,14 +48,16 @@
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "storybook": "^7.5.3",
-    "typescript": "^5.3.2",
-    "@radix-ui/react-select": "^2.0.0"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
